# Copyright (c) 2021 The Hns Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

source_set("component_updater") {
  sources = [
    "hns_component_updater_configurator.cc",
    "hns_component_updater_configurator.h",
  ]

  deps = [
    "//base",
    "//hns/components/constants",
    "//chrome/common",
    "//components/component_updater",
    "//components/prefs",
    "//components/services/patch/content",
    "//components/services/unzip/content",
    "//components/update_client",
    "//components/update_client:network_impl",
    "//components/update_client:patch_impl",
    "//components/update_client:unzip_impl",
    "//content/public/browser",
    "//services/network/public/cpp",
  ]

  if (is_win) {
    deps += [ "//chrome/installer/util:with_no_strings" ]
  }

  if (is_android) {
    sources += [
      "hns_component_updater_android.cc",
      "hns_component_updater_android.h",
    ]
    deps += [
      "//hns/build/android:jni_headers",
      "//chrome/browser:browser_process",
    ]
  }
}
